added test for facebook login

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,3 +21,13 @@
 
 en:
   hello: "Hello world"
+  activerecord:
+    attributes:
+      user:
+        start_at: "Start time"
+    errors:
+      models:
+        user:
+          attributes:
+            start_at:
+              blank: "is required"
